--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
         </h1>
       </div>
     </header>
-    <main>
-      <div class="container pt-4" id="hotel">
-        <!-- Offer section -->
+    <main id="hotel">
+      <div class="container pt-4 d-block d-sm-none">
+        <!-- offer small device -->
         <p class="h2 text-center pt-5">Co oferujemy?</p>
         <div class="row">
           <div class="col-5">
@@ -144,10 +144,12 @@
                 role="tabpanel"
                 aria-labelledby="list-long-list"
               >
-                Planujesz codzienne długie wędrówki albo chcesz zostać w
-                schronisku żeby podziwiać nocne niebo? Zostaw zwierzaka pod
-                naszą opieką i zajmij się wędrowaniem, a my zajmiemy się
-                zwierzakiem.
+                <p>
+                  Planujesz codzienne długie wędrówki albo chcesz zostać w
+                  schronisku żeby podziwiać nocne niebo? Zostaw zwierzaka pod
+                  naszą opieką i zajmij się wędrowaniem, a my zajmiemy się
+                  zwierzakiem.
+                </p>
               </div>
               <div
                 class="tab-pane fade"
@@ -155,10 +157,12 @@
                 role="tabpanel"
                 aria-labelledby="list-hour-list"
               >
-                Chcesz iść w góry, ale nie masz z kim zostawić zwierzaka? To
-                wybór dla Ciebie! Możemy zaopiekowac się Twoim zwierzakiem na
-                kilka godzin, gdy ty będziesz wędrował po szlakach albo zwiedzał
-                miasto.
+                <p>
+                  Chcesz iść w góry, ale nie masz z kim zostawić zwierzaka? To
+                  wybór dla Ciebie! Możemy zaopiekowac się Twoim zwierzakiem na
+                  kilka godzin, gdy ty będziesz wędrował po szlakach albo
+                  zwiedzał miasto.
+                </p>
               </div>
               <div
                 class="tab-pane fade"
@@ -166,10 +170,12 @@
                 role="tabpanel"
                 aria-labelledby="list-delivery-list"
               >
-                Jesteśmy bardzo blisko centrum, ale jeśli przyjechałeś do nas
-                pociągiem lub autobusem i nie masz jak do nas dojechać, mamy dla
-                Ciebie rozwiazanie! Możemy odebrać od ciebie zwierzaka i
-                dostarczyć go o umówionej godzinie.
+                <p>
+                  Jesteśmy bardzo blisko centrum, ale jeśli przyjechałeś do nas
+                  pociągiem lub autobusem i nie masz jak do nas dojechać, mamy
+                  dla Ciebie rozwiazanie! Możemy odebrać od ciebie zwierzaka i
+                  dostarczyć go o umówionej godzinie.
+                </p>
               </div>
               <div
                 class="tab-pane fade"
@@ -177,10 +183,12 @@
                 role="tabpanel"
                 aria-labelledby="list-food-list"
               >
-                Sugerujemy abyś zabrał ulubione jedzenie swojego zwierzaka ze
-                sobą, żeby nie zmieniać nawyków żywieniowych. Jeśli jednak tego
-                nie zrobiłeś, mamy do dyspozycjy najlepsza karmę dla twojego
-                pupila.
+                <p>
+                  Sugerujemy abyś zabrał ulubione jedzenie swojego zwierzaka ze
+                  sobą, żeby nie zmieniać nawyków żywieniowych. Jeśli jednak
+                  tego nie zrobiłeś, mamy do dyspozycjy najlepsza karmę dla
+                  twojego pupila.
+                </p>
               </div>
               <div
                 class="tab-pane fade"
@@ -188,13 +196,132 @@
                 role="tabpanel"
                 aria-labelledby="list-stay-list"
               >
-                Nie ważne czy twój zwierzak to kanapowiec, czy jest
-                przyzwyczajony do zostawania w boksie. U nas każdy będzie czuł
-                się dobrze. Z każdym psem spędzamy odpowiednią ilość czasu na
-                wybiegu, bo wiemy że wybiegany pies, to szczęśliwy pies!
+                <p>
+                  Nie ważne czy twój zwierzak to kanapowiec, czy jest
+                  przyzwyczajony do zostawania w boksie. U nas każdy będzie czuł
+                  się dobrze. Z każdym psem spędzamy odpowiednią ilość czasu na
+                  wybiegu, bo wiemy że wybiegany pies, to szczęśliwy pies!
+                </p>
               </div>
             </div>
           </div>
+        </div>
+      </div>
+      <!-- offer bigger device -->
+      <div class="container text-center pt-4 d-none d-sm-block">
+        <p class="h2 text-center pt-5">Co oferujemy?</p>
+        <div id="offerCarousel" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li
+              data-target="#offerCarousel"
+              data-slide-to="0"
+              class="active"
+            ></li>
+            <li data-target="#offerCarousel" data-slide-to="1"></li>
+            <li data-target="#offerCarousel" data-slide-to="2"></li>
+            <li data-target="#offerCarousel" data-slide-to="3"></li>
+            <li data-target="#offerCarousel" data-slide-to="4"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img
+                class="d-block w-100"
+                src="images/pexels-christian-domingues-731022-by-Christian Domingues.jpg"
+                alt="photo by-Christian Domingues"
+              />
+              <div class="carousel-caption paragraph-Background">
+                <h5>Dłuższe pobyty</h5>
+                <p class="">
+                  Planujesz codzienne długie wędrówki albo chcesz zostać w
+                  schronisku żeby podziwiać nocne niebo? Zostaw zwierzaka pod
+                  naszą opieką i zajmij się wędrowaniem, a my zajmiemy się
+                  zwierzakiem.
+                </p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img
+                class="d-block w-100"
+                src="images/pexels-johann-1254140-by-Johann.jpg"
+                alt="photo by Johann"
+              />
+              <div class="carousel-caption paragraph-Background">
+                <h5>Tylko kilka godzin</h5>
+                <p>
+                  Chcesz iść w góry, ale nie masz z kim zostawić zwierzaka? To
+                  wybór dla Ciebie! Możemy zaopiekowac się Twoim zwierzakiem na
+                  kilka godzin, gdy ty będziesz wędrował po szlakach albo
+                  zwiedzał miasto.
+                </p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img
+                class="d-block w-100"
+                src="images/pexels-helena-lopes-2253275-by-Helena Lopes.jpg"
+                alt="by-Helena Lopes"
+              />
+              <div class="carousel-caption paragraph-Background">
+                <h5>Transport</h5>
+                <p>
+                  Jesteśmy bardzo blisko centrum, ale jeśli przyjechałeś do nas
+                  pociągiem lub autobusem i nie masz jak do nas dojechać, mamy
+                  dla Ciebie rozwiazanie! Możemy odebrać od ciebie zwierzaka i
+                  dostarczyć go o umówionej godzinie.
+                </p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img
+                class="d-block w-100"
+                src="images/pexels-freestocksorg-688961-by-freestocks.org.jpg"
+                alt="by-freestocks"
+              />
+              <div class="carousel-caption paragraph-Background">
+                <h5>Jedzenie</h5>
+                <p>
+                  Sugerujemy abyś zabrał ulubione jedzenie swojego zwierzaka ze
+                  sobą, żeby nie zmieniać nawyków żywieniowych. Jeśli jednak
+                  tego nie zrobiłeś, mamy do dyspozycjy najlepsza karmę dla
+                  twojego pupila.
+                </p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img
+                class="d-block w-100"
+                src="images/pexels-jaclou-dl-16857454-by-JacLou- DL.jpg"
+                alt="by-JacLou- DL"
+              />
+              <div class="carousel-caption paragraph-Background">
+                <h5>W domu lub boksie</h5>
+                <p>
+                  Nie ważne czy twój zwierzak to kanapowiec, czy jest
+                  przyzwyczajony do zostawania w boksie. U nas każdy będzie czuł
+                  się dobrze. Z każdym psem spędzamy odpowiednią ilość czasu na
+                  wybiegu, bo wiemy że wybiegany pies, to szczęśliwy pies!
+                </p>
+              </div>
+            </div>
+          </div>
+          <a
+            class="carousel-control-prev"
+            href="#offerCarousel"
+            role="button"
+            data-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a
+            class="carousel-control-next"
+            href="#offerCarousel"
+            role="button"
+            data-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
         </div>
       </div>
       <!-- Cennik -->
@@ -244,19 +371,19 @@
       </div>
       <p class="text-center">
         <button
-          class="btn btn-primary custom-color px-3"
+          class="btn btn-success custom-color p-3"
           type="button"
           data-toggle="collapse"
-          data-target="#collapseExample"
+          data-target="#promoWindow"
           aria-expanded="false"
-          aria-controls="collapseExample"
+          aria-controls="promoWindow"
         >
           Twój pies już się z nami zatrzymywał?
         </button>
       </p>
-      <div class="collapse" id="collapseExample">
+      <div class="collapse text-center" id="promoWindow">
         <div class="card card-body">
-          <p class="text-center">U nas sie opłaca!</p>
+          <p>U nas sie opłaca!</p>
 
           <p>
             Dla naszych stałych klientów oferujemy 10% zniżki do całości
@@ -264,6 +391,7 @@
           </p>
         </div>
       </div>
+
       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit,
       rem nihil omnis, numquam illo quas atque minus animi dolorum molestias
       pariatur dicta dolorem vitae eveniet aut nemo earum exercitationem eos.
