--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Kontakt</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#reservation">Rezerwacja</a>
+          </li>
         </ul>
       </div>
     </nav>
@@ -369,7 +372,7 @@
           </div>
         </div>
       </div>
-      <p class="text-center">
+      <p class="text-center mt-3">
         <button
           class="btn btn-success custom-color p-3"
           type="button"
@@ -391,7 +394,109 @@
           </p>
         </div>
       </div>
-
+      <!-- reservation form -->
+      <h2 class="text-center pt-5 pb-3 mx-3" id="reservation">
+        Zarezerwuj pobyt twojego pupila wcześniej:
+      </h2>
+      <div class="container d-flex justify-content-center">
+        <form class="" style="width: 320px">
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input
+              type="email"
+              class="form-control"
+              id="email"
+              placeholder="E-mail"
+            />
+          </div>
+          <div class="form-group">
+            <label for="phone">Telefon</label>
+            <input
+              type="text"
+              class="form-control"
+              id="phone"
+              placeholder=" +48 000 000 000"
+            />
+          </div>
+          <div class="row mb-3">
+            <div class="col">
+              <label for="">Początek wizyty</label>
+              <input
+                type="text"
+                class="form-control"
+                placeholder="DD.MM.RRRR"
+              />
+            </div>
+            <div class="col">
+              <label for="">Koniec wizyty</label>
+              <input
+                type="text"
+                class="form-control"
+                placeholder="DD.MM.RRRR"
+              />
+            </div>
+          </div>
+          <p class="h5 text-center">Wiek zwierzaka:</p>
+          <div class="d-flex justify-content-around mb-3">
+            <div class="form-check">
+              <input
+                class="form-check-input"
+                type="radio"
+                name="age"
+                id="puppy"
+                value="option1"
+                checked
+              />
+              <label class="form-check-label" for="puppy"> Szczeniak </label>
+            </div>
+            <div class="form-check">
+              <input
+                class="form-check-input"
+                type="radio"
+                name="age"
+                id="adult"
+                value="option2"
+              />
+              <label class="form-check-label" for="adult"> Dorosły </label>
+            </div>
+            <div class="form-check disabled">
+              <input
+                class="form-check-input"
+                type="radio"
+                name="age"
+                id="senior"
+                value="option3"
+              />
+              <label class="form-check-label" for="senior"> Starszy </label>
+            </div>
+          </div>
+          <p class="h5 text-center">Dodatkowo</p>
+          <div class="d-flex justify-content-around mb-3">
+            <div class="form-check">
+              <input
+                class="form-check-input"
+                type="radio"
+                name="extra"
+                id="transport"
+                value="option4"
+              />
+              <label class="form-check-label" for="transport">
+                Transport
+              </label>
+            </div>
+            <div class="form-check disabled">
+              <input
+                class="form-check-input"
+                type="radio"
+                name="extra"
+                id="food"
+                value="option5"
+              />
+              <label class="form-check-label" for="food"> Wyżywienie </label>
+            </div>
+          </div>
+        </form>
+      </div>
       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit,
       rem nihil omnis, numquam illo quas atque minus animi dolorum molestias
       pariatur dicta dolorem vitae eveniet aut nemo earum exercitationem eos.
