--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
         Zarezerwuj pobyt twojego pupila wcześniej:
       </h2>
       <div class="container d-flex justify-content-center">
-        <form class="" style="width: 320px">
+        <form class="mb-3" style="width: 320px">
           <div class="form-group">
             <label for="email">Email</label>
             <input
@@ -471,29 +471,18 @@
             </div>
           </div>
           <p class="h5 text-center">Dodatkowo</p>
-          <div class="d-flex justify-content-around mb-3">
-            <div class="form-check">
-              <input
-                class="form-check-input"
-                type="radio"
-                name="extra"
-                id="transport"
-                value="option4"
-              />
-              <label class="form-check-label" for="transport">
-                Transport
-              </label>
-            </div>
-            <div class="form-check disabled">
-              <input
-                class="form-check-input"
-                type="radio"
-                name="extra"
-                id="food"
-                value="option5"
-              />
-              <label class="form-check-label" for="food"> Wyżywienie </label>
-            </div>
+          <div class="d-flex justify-content-around mb-3"><div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="transport">
+            <label class="form-check-label" for="transport">
+              Transport
+            </label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="food">
+            <label class="form-check-label" for="food">
+              Wyżywienie
+            </label>
+          </div></div>
           </div>
         </form>
       </div>
