--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
           </div>
 
           <address>
-            ZooHotel Zakopane <br />
+            <span class="h5">ZooHotel Zakopane</span> <br />
             Walkosze 27 <br />
             34-500 Zakopane
           </address>
